--- a/src/app/ingreso-datos/ingreso-datos.component.html
+++ b/src/app/ingreso-datos/ingreso-datos.component.html
@@ -2,15 +2,15 @@
 
 <form>
   <div>
-    <input [(ngModel)]="jug_x" name="jug_x" type="number" min="1" step="1" (keydown)="noDecimals($event,1)" placeholder="Ingrese primer valor">
+    <input [(ngModel)]="jug_x" name="jug_x" type="number" min="1" step="1" (keydown)="noDecimals($event,1)" placeholder="Insert the value of jug X">
   </div>
 
   <div>
-    <input [(ngModel)]="jug_y" name="jug_y" type="number" min="1" step="1" (keydown)="noDecimals($event,2)" placeholder="Ingrese segundo valor">
+    <input [(ngModel)]="jug_y" name="jug_y" type="number" min="1" step="1" (keydown)="noDecimals($event,2)" placeholder="Insert the value of jug Y">
   </div>
 
   <div>
-    <input [(ngModel)]="cap_z" name="cap_z" type="number" min="1" step="1" (keydown)="noDecimals($event,3)" placeholder="Ingrese tercer valor">
+    <input [(ngModel)]="cap_z" name="cap_z" type="number" min="1" step="1" (keydown)="noDecimals($event,3)" placeholder="Measure Z">
   </div> 
 </form>
 
